<resources>
    <string name="app_name">PPB_m6_p1</string>
    <string name="nama">Nama</string>
    <string name="kelamin">Kelamin</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="hobi">Hobi</string>
    <string name="coding">Coding</string>
    <string name="traveling">Traveling</string>
    <string name="cooking">Cooking</string>
    <string name="proses">Proses</string>
</resources>