<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/nama"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNama"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="43dp"
        android:text="@string/kelamin"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <RadioGroup
        android:id="@+id/rg_kelamin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toEndOf="@id/textView2"
        app:layout_constraintTop_toTopOf="@id/textView2">

        <RadioButton
            android:id="@+id/rb_pria"
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:onClick="onRbClicked"
            android:text="@string/pria"
            android:textSize="20sp"
            tools:ignore="TextSizeCheck,TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/rb_wanita"
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:onClick="onRbClicked"
            android:text="@string/wanita"
            android:textSize="20sp"
            tools:ignore="TextSizeCheck,TouchTargetSizeCheck" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="43dp"
        android:text="@string/hobi"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2"/>

        <LinearLayout
            android:id="@+id/lineatCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="66dp"
            android:layout_marginTop="35dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toRightOf="@id/textView3"
            app:layout_constraintTop_toBottomOf="@id/rg_kelamin">

            <CheckBox
                android:id="@+id/cb_coding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:onClick="onCbClicked"
                android:text="@string/coding" />

            <CheckBox
                android:id="@+id/cb_traveling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:onClick="onCbClicked"
                android:text="@string/traveling" />

            <CheckBox
                android:id="@+id/cb_cooking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:onClick="onCbClicked"
                android:text="@string/cooking" />
        </LinearLayout>

    <Button
        android:id="@+id/btnProses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="onBtnProsesClicked"
        android:text="@string/proses"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lineatCheckBox" />

    <TextView
        android:id="@+id/tvPesan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnProses" />
</androidx.constraintlayout.widget.ConstraintLayout>
